sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:11: error: not found: value j
	j=i
        ^AlgInsertionSort:12: error: not found: value j
	while(j>0 && T(j-1)>x)
              ^AlgInsertionSort:14: error: not found: value j
		T(j)=T(j-1)
                  ^AlgInsertionSort:15: error: not found: value j
		j=j-1  
                ^AlgInsertionSort:17: error: not found: value j
	T(j)=x
          ^